examples/http-request-header-filter/headers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headers
  template:
    metadata:
      labels:
        app: headers
    spec:
      containers:
      - name: headers
        image: nginx
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: config-volume
          mountPath: /etc/nginx
          readOnly: true
      volumes:
      - name: config-volume
        configMap:
          name: headers-config
---
apiVersion: v1
kind: Service
metadata:
  name: headers
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: headers
